new: fed: basic page functionality

--- a/src/css/themes/common.variables.styl
+++ b/src/css/themes/common.variables.styl
@@ -14,7 +14,7 @@
 // It's highly recommended to change the default colors
 // to match your app's branding.
 
-$primary   = #DB2828
+$primary   = #0273d4
 $secondary = #26A69A
 $tertiary  = #555
 
