new: fed: WIP guide & edit guide

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -1,5 +1,13 @@
 @import '~variables'
-
+/* body {
+  min-height: auto;
+  .q-layout {
+    min-height: auto;
+    main {
+      min-height: auto!important;
+    }
+  }
+} */
 #login
   .mid-bg
     background $primary
