chg: fed: stories > projects, tool pos with drawer

--- a/src/css/themes/common.variables.styl
+++ b/src/css/themes/common.variables.styl
@@ -14,8 +14,8 @@
 // It's highly recommended to change the default colors
 // to match your app's branding.
 
-$primary   = #0273d4
-$secondary = #26A69A
+$primary   = #2fb8ac
+$secondary = #fad600
 $tertiary  = #555
 
 $neutral   = #E0E1E2
