--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -38,3 +38,101 @@
       font-weight bold
       text-align center
       padding-bottom 20px
+
+.profile {
+  margin-top: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  a {
+    text-decoration: none;
+    color: #000;
+  }
+  .profile-avatar {
+    display: inline-block;
+    width: 150px;
+    max-width: 100%;
+    border-radius: 50%;
+    border: transparent 5px solid;
+    box-sizing: border-box;
+    &.profile-active {
+      box-shadow: 0 1px 5px rgba(0,0,0,0.2), 0 2px 2px rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12);
+      border: solid 5px $primary;
+    }
+    .profile-img {
+      border-radius: 50%;
+      max-width: 100%;
+      height: 140px;
+      background-position: center center;
+      background-size: cover;
+    }
+    .profile-initials {
+      width: 150px;
+      max-width: 100%;
+      height: 140px;
+      display: flex;
+      border-radius: 50%;
+      align-items: center;
+      justify-content: center;
+      font-size: 4em;
+      border: none;
+      background-color: #ddd;
+    }
+  }
+  .profile-label {
+    text-align: center;
+    margin-top: 5px;
+  }
+}
+
+.profiles-sm {
+  .profile {
+    &.profile-all {
+      .profile-avatar {
+        width: 80px;
+      }
+    }
+    .profile-avatar {
+      width: 75px;
+      .profile-initials {
+        width: 75px;
+        height: 65px;
+        font-size: 2.5em;
+      }
+      .profile-img {
+        height: 65px;
+      }
+    }
+  }
+}
+
+.profiles-wrapper {
+  margin-top: 10px;
+  .profile {
+    margin-right: 10px;
+    margin-bottom: 20px;
+    cursor: pointer;
+    position: relative;
+    .profile-avatar {
+      position: relative;
+      .avatar-img {
+        position: relative;
+        z-index: 1;
+      }
+      .profile-edit {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 5em;
+        z-index: 2;
+        background-color: rgba(0,0,0,0.5);
+        color: #fff;
+      }
+    }
+  }
+}
