--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -8,6 +8,12 @@
     }
   }
 } */
+a {
+  color: $primary;
+  &:visited {
+    color: $primary;
+  }
+}
 #login
   .mid-bg
     background $primary
@@ -33,11 +39,16 @@
     @media (max-width: 1000px)
       width 80%
 
-    .login-title
+    .login-title {
       color rgba(0, 0, 0, .5)
       font-weight bold
       text-align center
-      padding-bottom 20px
+      margin-bottom 40px;
+
+        h5 {
+          margin-bottom 5px
+        }
+    }
 
 .profile {
   margin-top: 5px;
@@ -107,6 +118,33 @@
   }
 }
 
+.profile-xs {
+  display: inline-block;
+  .profile {
+    margin-top: 0;
+    &.profile-all {
+      .profile-avatar {
+        width: 50px;
+      }
+    }
+    .profile-avatar {
+      width: 50px;
+      border: transparent 2px solid;
+      &.profile-active {
+        border: solid 2px $secondary;
+      }
+      .profile-initials {
+        width: 50px;
+        height: 46px;
+        font-size: 1.5em;
+      }
+      .profile-img {
+        height: 46px;
+      }
+    }
+  }
+}
+
 .profiles-wrapper {
   margin-top: 10px;
   .profile {
@@ -130,6 +168,7 @@
         justify-content: center;
         font-size: 5em;
         z-index: 2;
+        border-radius: 50%;
         background-color: rgba(0,0,0,0.5);
         color: #fff;
       }
