--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -15,6 +15,12 @@
   right: 5px;
   z-index: 99;
   pointer-events: none;
+  text-align: right;
+  .brand-link {
+    font-size: .5em;
+    color: #ccc;
+    margin-top: -10px;
+  }
 }
 
 a {
