chg: fed: mobile styling

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -8,6 +8,14 @@
     }
   }
 } */
+body {
+  min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
+  .fullscreen {
+    max-height: 100vh;
+    max-height: calc(var(--vh, 1vh) * 100);
+  }
+}
 
 .tuc-watermark {
   position: absolute;
