--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -15,6 +15,12 @@ body {
     max-height: 100vh;
     max-height: calc(var(--vh, 1vh) * 100);
   }
+  #_buglog-container {
+    right: -50px !important;
+  }
+  #_buglog-form {
+    left: -370px !important;
+  }
 }
 
 .tuc-watermark {
